--- a/pages/infoShare/infoShare.wxss
+++ b/pages/infoShare/infoShare.wxss
@@ -5,12 +5,34 @@ page {
     flex-direction: column;
     justify-content: flex-start;
 }
+.search {
+  margin-top: 20rpx;
+  width: 100%;
+  background: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+ .search input {
+  border: 1px solid FFF;
+  border-radius: 5px;
+  width: 100%;
+  height: 60rpx;
+  margin: 0 10rpx;
+  background-color: white;
+}
+.search button {
+  margin-right: 10rpx;
+  height: 60rpx;
+  width: 100rpx;
+  padding: 0;
+}
 .list {
     margin-top: 40rpx;
     height: auto;
     width: 100%;
     background: #FFF;
-    padding: 0 0 0 40rpx;
+    padding: 0 10rpx 0 40rpx;
     border: 1px solid rgba(0, 0, 0, .1);
     border-left: none;
     border-right: none;
@@ -38,3 +60,15 @@ page {
 .list-item:first-child {
     border-top: none;
 }
+.add-click{
+  height: 120rpx;
+  width: 120rpx;
+  border-radius: 100%;
+  position: fixed;
+  bottom: 150rpx;
+  right: 20rpx;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9;
+	}
