--- a/client/pages/index/index.wxml
+++ b/client/pages/index/index.wxml
@@ -8,7 +8,7 @@
     </block>
   </view>
   <view class="usermotto">
-    <button type="primary" class="menubutton" bindtap='getVotePage'>投票</button>
-    <button type="primary" class="menubutton" bindtap='getInfoSharePage'>信息共享</button>
+    <button type="primary" class="menubutton" bindtap='test'>测试组件</button>
   </view>
+  <image-upload id="imageUpload"/>
 </view>
